# DesktopNikoSoundboard

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
characters/: niko_meow.chara  niko_yippee.chara  penguin.chara  sheep.chara
characters/niko_meow/: char.json
characters/niko_yippee/: char.json
characters/penguin/: char.json
characters/sheep/: char.json
src/: asset_source.rs  character.rs  character_page.rs  main.rs  pixel_img.rs  select_page.rs  theme.rs  title_bar.rs
