[package]
name = "niko-oneshot"
version = "1.0.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
image = "0.25"
kira = "0.12"
rand = "0.10"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
