[package]
name = "niko-oneshot"
version = "1.0.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
rust-embed = { version = "8.7", features = ["interpolate-folder-path", "include-exclude"] }
image = "0.25"
kira = "0.12"
rand = "0.10"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.15"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
